# catalyst-tem-particle-analysis-demo

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: portfolio-notes.md  publication-roadmap.md  references.md
docs/assets/demo_run/: report.json  summary.md
examples/synthetic_dataset/: manifest.csv
examples/synthetic_dataset/labels/: synthetic_tem_000.json  synthetic_tem_001.json  synthetic_tem_002.json  synthetic_tem_003.json
scripts/: safety_scan.py
src/tem_particle_demo/: __init__.py  cli.py  detector.py  manifest.py  metrics.py  overlays.py  pipeline.py  segmentation.py  synthetic.py
tests/: test_metrics.py  test_pipeline.py  test_safety_scan.py  test_synthetic_manifest.py
