[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tem-particle-analysis-demo"
version = "0.1.0"
description = "Data-safe demo of an auditable TEM particle-analysis workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Iserlohn"}]
dependencies = [
  "numpy>=1.24",
  "Pillow>=10",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
tem-demo-generate = "tem_particle_demo.cli:generate_main"
tem-demo-run = "tem_particle_demo.cli:run_main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
